Fixing group avatar cropping issues.
git-svn-id: https://buddypress.svn.wordpress.org/trunk@1445 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-themes/buddypress-member/css/base.css
+++ b/bp-themes/buddypress-member/css/base.css
@@ -191,6 +191,10 @@ input#submit, p.submit input {
 			padding-left: 276px;
 			margin-left: -276px;
 		}
+			#create-group-form .crop-img {
+				padding-left: 476px !important;
+				margin-left: -476px !important;	
+			}
 
 	#userbar p#login-text {
 		text-align: center;
